--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div style="width:60%;">
 			<h1>Political IQ</h1>
 			<h2><a href="quiz.html?lang=en&length=1">Short Quiz (72 questions)</a> | <a href="quiz.html?lang=en&length=2">Long Quiz (144 questions)</a></h2>
-			<img src="icons/icon_medium.png"/>
+			<img src="icons/brain.gif"/>
 			<h2>What is Six Triangles?</h2>
 			<p>Six Triangles is a political alignment quiz that attempts to place your beliefs in 6 triangles. Many quizzes use 2d scales, where you are, for example, democratic or authoritarian. However, some people may blieve that the government should have little say in their lives, whether democratic or authoritarian, and thus, they might vote no to both democratic and authoritarian questions. This quiz attempts to resolve that by measuring the combination of 3 attributes. While this isn't perfect, it aims to be able to give a better method of comparison than most quizzes.
 			<h2>What are the triangles?</h2>
