--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <html>
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-167439288-1"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-167439288-1"></script>
+
+	<script>
+
+	window.dataLayer = window.dataLayer || [];
+
+	function gtag(){dataLayer.push(arguments);}
+
+	gtag('js', new Date());
+
 	
-	gtag('config', 'UA-167439288-1');
-	</script>
+	gtag('config', 'UA-167439288-1');
+
+	</script>
+
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico"/>
 	<title>Six Triangles</title>
@@ -23,12 +31,17 @@
 		h1 {
 			font-size: 5em;
 		}
-		a[href] {
-			color: #1e8ad6;
-		}
+		a[href] {
+
+			color: #1e8ad6;
+
+		}
+
 		
-		a[href]:hover {
-			color: #3ba0e6;
+		a[href]:hover {
+
+			color: #3ba0e6;
+
 		}
 	</style>
 </head>
@@ -37,9 +50,9 @@
 		<div style="width:60%;">
 			<h1>Political IQ</h1>
 			<h2><a href="quiz.html?lang=en&length=1">Short Quiz (72 questions)</a> | <a href="quiz.html?lang=en&length=2">Long Quiz (144 questions)</a></h2>
-			<img src="icons/brain.gif"/>
-			<h2>What is Six Triangles?</h2>
-			<p>Six Triangles is a political alignment quiz that attempts to place your beliefs in 6 triangles. Many quizzes use 2d scales, where you are, for example, democratic or authoritarian. However, some people may blieve that the government should have little say in their lives, whether democratic or authoritarian, and thus, they might vote no to both democratic and authoritarian questions. This quiz attempts to resolve that by measuring the combination of 3 attributes. While this isn't perfect, it aims to be able to give a better method of comparison than most quizzes.
+			<img src="icons/brain2.gif"/>
+			<h2>What is Political IQ?</h2>
+            <p>Political IQ is your ability to understand politics. This is a short test that measures this.</p>
 			<h2>What are the triangles?</h2>
 			<div style="color:#8dd3c7;">
 				<h3>Economics</h3>
