--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<h2><a href="quiz.html?lang=en&length=1">Short Quiz (72 questions)</a> | <a href="quiz.html?lang=en&length=2">Long Quiz (144 questions)</a></h2>
 			<img src="icons/brain2.gif"/>
 			<h2>What is Political IQ?</h2>
-            <p>Political IQ is your ability to understand politics. This is a short test that measures your ability to understand politics. This is built on the research of Kumerji et al. (<a>https://brain.mpg.de/fileadmin/user_upload/images/IMPRS/Misc/IMPRS_class_Acker_Palmer_2018_review_1.pdf</a></p>
+            <p>Political IQ is your ability to understand politics. This is a short test that measures your ability to understand politics. This is built on the (<a href="https://brain.mpg.de/fileadmin/user_upload/images/IMPRS/Misc/IMPRS_class_Acker_Palmer_2018_review_1.pdf</a>">research of Kumerji et al.</a></p>
 			<h2>What are the triangles?</h2>
 			<div style="color:#8dd3c7;">
 				<h3>Economics</h3>
