--- a/index.html
+++ b/index.html
@@ -53,46 +53,47 @@
 			<img src="icons/brain2.gif"/>
 			<h2>What is Political IQ?</h2>
             <p>Political IQ is your ability to understand politics. This is a short test that measures your ability to understand politics. This is built on the research of <a href="https://brain.mpg.de/fileadmin/user_upload/images/IMPRS/Misc/IMPRS_class_Acker_Palmer_2018_review_1.pdf">Kumerji et al.,</a> concerning the density of dendritic spines in the brain. This test will accurately predict your numerical and verbal IQ to within two standard deviations (that's really accurate). In other words, this test determines how smart you are in all walks of life.</p>
-			<h2>What are the triangles?</h2>
+			<h2>What are the questions?</h2>
+			<p>Well, take the test and find out! But if you're busy, here's a summary...</p>
 			<div style="color:#8dd3c7;">
-				<h3>Economics</h3>
+				<h3>Questions of Economic Control</h3>
 				<p><strong>Control - </strong> People who believe in control believe that most industries should be nationalized and run by the government</p>
 				<p><strong>Regulation - </strong> People who believe in regulation believe that the government must take a heavy hand in regulating private industry</p>
 				<p><strong>Markets - </strong> People who believe in markets believe that the government must leave the market alone and not interfere with it</p>
 			</div>
 			<div style="color:#ffffb3;">
-				<h3>Personal Freedom</h3>
+				<h3>Questions of Personal Freedom</h3>
 				<p><strong>Freedom - </strong> People who believe in freedom believe that people should be free to criticize the government and leaders without consequences</p>
 				<p><strong>Security - </strong> People who believe in security believe that the state must have powers to ensure that its people are safe</p>
 				<p><strong>Truth - </strong> People who believe in truth believe that people should be held accountable for misleading statements and actions</p>
 			</div>
 			<div style="color:#bebada;">
-				<h3>Culture</h3>
+				<h3>Questions of Cultural Norms</h3>
 				<p><strong>Tradition - </strong> People who believe in tradition believe that laws should be in place to enforce traditional morals</p>
 				<p><strong>Progress - </strong> People who believe in progress believe that laws should be in place to enforce the public good</p>
 				<p><strong>Freedom - </strong> People who believe in freedom believe that people should be free to choose whether to follow traditional morals or the public good</p>
 			</div>
 			<div style="color:#fdb462;">
-				<h3>Equality</h3>
+				<h3>Questions of Equality of Opportunity</h3>
 				<p><strong>Opportunity - </strong> People who believe in equality of opportunity believe that people should all have an equal chance to succeed. Those who do the best with their opportunity are rewarded more.</p>
 				<p><strong>Outcome - </strong> People who believe in equality of outcome believe that there should be limits to how much or how little you can earn to ensure that everyone is able to get by</p>
 				<p><strong>Burden - </strong> People who believe in equality of burden believe that no person should have to give up a disproportionate amount of what they have earned to allow others to be able to succeed</p>
 			</div>
 			<div style="color:#80b1d3;">
-				<h3>Government</h3>
+				<h3>Questions about how big the government should be</h3>
 				<p><strong>Democracy - </strong> People who believe in democracy believe that the popular will should govern.</p>
 				<p><strong>Authority - </strong> People who believe that those in power should have absolute authority with or without the popular will.</p>
 				<p><strong>Minarchy - </strong> People who believe in minarchy believe that the government should be small or even non-existent.</p>
 			</div>
 			<div style="color:#fb8072;">
-				<h3>Foreign Policy</h3>
+				<h3>Questions about Foreign Policy</h3>
 				<p><strong>Imperialism - </strong> People who believe in impreialism believe that their nation has the right to influence other nations for its own gain.</p>
 				<p><strong>Isolationism - </strong> People who believe in isolationism believe that their nation should not get involved with the other nations, instead focusing on itself.</p>
 				<p><strong>Globalism - </strong> People who believe in globalism believe that their nation should ally and influence other nations for the benefit of the world's population.</p>
 				<p></p>
 			</div>
 			<h2>Bilingual?</h2>
-			<p>The website is set up so the quiz can support multiple languages. If you know a language that's not on here (or spot a typo/error in one that is), feel free to <a href="https://github.com/sixtriangles/sixtriangles.github.io/issues/new">open an issue</a> or send an email to sixtrianglespoliticalquiz@gmail.com to help translate it. :)</p>
+			<p>The website is set up so the quiz can support multiple languages. If you know a language that's not on here (or spot a typo/error in one that is), feel free to <a href="https://github.com/politicaliq/political_iq/issues/new">open an issue</a> or send an email to brulgobulbers@gmail.com to help translate it. :)</p>
 		</div>
 	</center>
 </body>
