--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico"/>
-	<title>Six Triangles</title>
+	<title>Political IQ</title>
 	<style>
 		body {
 			font-family: Arial;
