--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 <html>
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
 
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-167439288-1"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-63376867-5"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-	<script>
-
-	window.dataLayer = window.dataLayer || [];
-
-	function gtag(){dataLayer.push(arguments);}
-
-	gtag('js', new Date());
-
-	
-	gtag('config', 'UA-167439288-1');
-
-	</script>
+    gtag('config', 'UA-63376867-5');
+    </script>
 
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico"/>
-	<title>Political IQ</title>
+	<title>Six Triangles</title>
 	<style>
 		body {
 			font-family: Arial;
