--- a/quiz.html
+++ b/quiz.html
@@ -2,7 +2,7 @@
 <head>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-63376867-5"></script>
+    <script async src="http://www.googletagmanager.com/gtag/js?id=UA-63376867-5"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
