--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<h1>Political IQ</h1>
 			<h2><a href="quiz.html?lang=en&length=1">Short Quiz (72 questions)</a> | <a href="quiz.html?lang=en&length=2">Long Quiz (144 questions)</a></h2>
 			<img src="icons/brain2.gif"/>
-			<h2>What is Political IQ?</h2>
+			<h2>What is Political IQ? (arse)</h2>
             <p>Political IQ is your ability to understand politics. This is a short test that measures your ability to understand politics. This is built on the research of <a href="https://brain.mpg.de/fileadmin/user_upload/images/IMPRS/Misc/IMPRS_class_Acker_Palmer_2018_review_1.pdf">Kumerji et al.,</a> concerning the density of dendritic spines in the brain. This test will accurately predict your numerical and verbal IQ to within two standard deviations (that's really accurate). In other words, this test determines how smart you are in all walks of life.</p>
 			<h2>What are the questions?</h2>
 			<p>Well, take the test and find out! But if you're busy, here's a summary...</p>
