--- a/results.html
+++ b/results.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-167439288-1"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	
-	gtag('config', 'UA-167439288-1');
-	</script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-63376867-5"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-63376867-5');
+    </script>
 	<meta charset="UTF-8" />
 	<link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico"/>
-	<title>Six Triangles</title>
+	<title>Political IQ</title>
 	<style>
 		body {
 			font-family: Arial;
@@ -26,7 +26,7 @@
 	</style>
 </head>
 <body style="background-color:#2b2d30">
-	<center><h1><a href="index.html"/>Six Triangles</a></h1></center>
+	<center><h1><a href="index.html"/>Political IQ</a></h1></center>
 </body>
 <script src="d3.min.js"></script>
 <script>
