--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico"/>
-	<title>Political IQ</title>
+	<title>Political IQ whee</title>
 	<style>
 		body {
 			font-family: Arial;
@@ -48,7 +48,7 @@
 			<h2>What is Political IQ?</h2>
             <p>Political IQ is your ability to understand politics. This is a short test that measures your ability to understand politics. This is built on the research of <a href="https://brain.mpg.de/fileadmin/user_upload/images/IMPRS/Misc/IMPRS_class_Acker_Palmer_2018_review_1.pdf">Kumerji et al.,</a> concerning the density of dendritic spines in the brain. This test will accurately predict your numerical and verbal IQ to within two standard deviations (that's really accurate). In other words, this test determines how smart you are in all walks of life.</p>
 			<h2>What are the questions?</h2>
-			<p>Well, take the test and find out! But if you're busy, here's a summary...</p>
+			<p>Well, take the test and find out! But if you're too busy, here's a summary...</p>
 			<div style="color:#8dd3c7;">
 				<h3>Questions of Economic Control</h3>
 				<p><strong>Control - </strong> People who believe in control believe that most industries should be nationalized and run by the government</p>
