--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico"/>
-	<title>Political IQ whee</title>
+	<title>Political IQ</title>
 	<style>
 		body {
 			font-family: Arial;
@@ -42,7 +42,7 @@
 <body style="background-color:#2b2d30">
 	<center>
 		<div style="width:60%;">
-			<h1>Political IQ</h1>
+			<h1>Political IQ whee</h1>
 			<h2><a href="quiz.html?lang=en&length=1">Short Quiz (6 questions)</a> | <a href="quiz.html?lang=en&length=2">Long Quiz (36 questions)</a></h2>
 			<img src="icons/brain2.gif"/>
 			<h2>What is Political IQ?</h2>
