--- a/quiz.html
+++ b/quiz.html
@@ -85,11 +85,11 @@
 		{
 			results[i] = []
 			questionbank[i] = [];
-			for(j = 0; j < 1; j++)
+			for(j = 0; j < 3; j++)
 			{
 				results[i][j] = 1;
 				questionbank[i][j] = []
-				for(k = 0; k < 1; k++)
+				for(k = 0; k < 4; k++)
 				{
 					questionbank[i][j][k] = [];
 					for(q = 0; q < length; q++)
@@ -109,7 +109,8 @@
 			questionlist[i] = array[rn];
 			array.splice(rn, 1)
 		}
-		questionlist = shuffle(questionlist)
+        questionlist = shuffle(questionlist)
+        questinolist = questionlist.slice(0, 10)
 		encoding = "qwertyuiopasdfghjklzxcvbnmEBAFCD"
 		lang = location.search.replace("?","").split("lang=")[1].split("&length=")[0];
 		width = window.innerWidth-150;
