--- a/quiz.html
+++ b/quiz.html
@@ -110,8 +110,8 @@
 			array.splice(rn, 1)
 		}
         questionlist = shuffle(questionlist)
-        questinolist = questionlist.slice(0, 10)
-		encoding = "qwertyuiopasdfghjklzxcvbnmEBAFCD"
+        questionlist = questionlist.slice(0, 10)
+        encoding = "qwertyuiopasdfghjklzxcvbnmEBAFCD"
 		lang = location.search.replace("?","").split("lang=")[1].split("&length=")[0];
 		width = window.innerWidth-150;
 		height = window.innerHeight-100;
