--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<center>
 		<div style="width:60%;">
 			<h1>Political IQ whee</h1>
-			<h2><a href="quiz.html?lang=en&length=1">Short Quiz (6 questions)</a> | <a href="quiz.html?lang=en&length=2">Long Quiz (36 questions)</a></h2>
+			<h2><a href="quiz.html?lang=en&length=1">Short Quiz (10 questions)</a> | <a href="quiz.html?lang=en&length=2">Long Quiz (100 questions) (More accurate)</a></h2>
 			<img src="icons/brain2.gif"/>
 			<h2>What is Political IQ?</h2>
             <p>Political IQ is your ability to understand politics. This is a short test that measures your ability to understand politics. This is built on the research of <a href="https://brain.mpg.de/fileadmin/user_upload/images/IMPRS/Misc/IMPRS_class_Acker_Palmer_2018_review_1.pdf">Kumerji et al.,</a> concerning the density of dendritic spines in the brain. This test will accurately predict your numerical and verbal IQ to within two standard deviations (that's really accurate). In other words, this test determines how smart you are in all walks of life.</p>
