--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 <body style="background-color:#2b2d30">
 	<center>
 		<div style="width:60%;">
-			<h1>Political IQ whee</h1>
+			<h1>Political IQ</h1>
+            <p>This usually takes about 2 mins</p>
 			<h2><a href="quiz.html?lang=en&length=1">Short Quiz (10 questions)</a> | <a href="quiz.html?lang=en&length=2">Long Quiz (100 questions) (More accurate)</a></h2>
 			<img src="icons/brain2.gif"/>
 			<h2>What is Political IQ?</h2>
