--- a/results.html
+++ b/results.html
@@ -10,6 +10,11 @@
     gtag('config', 'UA-63376867-5');
     </script>
 
+    <script src="d3-scale.v3.min.js"></script>
+    <script>
+
+    var xxx = d3.scaleLinear();
+
 	<meta charset="UTF-8" />
 	<link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico"/>
 	<title>Political IQ</title>
