--- a/results.html
+++ b/results.html
@@ -151,7 +151,7 @@
     score = [eco + freedom + culture + equality + gov + foreign] / 6 / 1000.0
     console.log(smart_data);
     console.log(score) 
-    var scale = d3.scale.linear().domain([0, 1]).range([80, 200]);
+    var scale = xxx.scale.linear().domain([0, 1]).range([80, 200]);
     console.log(scale)
 
 	function getClassification(index)
