--- a/results.html
+++ b/results.html
@@ -148,8 +148,8 @@
     score = [eco + freedom + culture + equality + gov + foreign] / 6 / 1000.0
     console.log(smart_data);
     console.log(score) 
-    var xxx = d3.scaleLinear();
-    var scale = xxx.scale.linear().domain([0, 1]).range([80, 200]);
+    // var xxx = d3.scaleLinear();
+    var scale = d3.scaleLinear();.domain([0, 1]).range([80, 200]);
     console.log(scale)
 
 	function getClassification(index)
