--- a/results.html
+++ b/results.html
@@ -149,7 +149,7 @@
     console.log(smart_data);
     console.log(score);
     // var xxx = d3.scaleLinear();
-    var scale = d3.scaleLinear();.domain([0, 1]).range([80, 200]);
+    var scale = d3.scaleLinear().domain([0, 1]).range([80, 200]);
     console.log(scale)
 
 	function getClassification(index)
