--- a/results.html
+++ b/results.html
@@ -146,7 +146,7 @@
     gov = smart_data[2][0]       // DEMOCRACY
     foreign = smart_data[2][2]   // GLOBALISM
     score = [eco + freedom + culture + equality + gov + foreign] / 6 / 1000.0;
-    console.log(smart_data);
+    console.log([eco + freedom + culture + equality + gov + foreign]);
     console.log(score);
     // var xxx = d3.scaleLinear();
     var scale = d3.scaleLinear().domain([0, 1]).range([80, 200]);
