--- a/results.html
+++ b/results.html
@@ -150,7 +150,7 @@
     console.log(score);
     // var xxx = d3.scaleLinear();
     var scale = d3.scaleLinear().domain([0, 1]).range([80, 200]);
-    console.log(scale())
+    console.log(scale(score))
 
 	function getClassification(index)
 	{
