--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		}
 	</style>
 </head>
-<body style="background-color:#2b2d30">
+<body style="background-color:#000000">
 	<center>
 		<div style="width:60%;">
 			<h1>Political IQ</h1>
