--- a/results.html
+++ b/results.html
@@ -138,7 +138,7 @@
     } else if (scale(score) <= 200) {
         center.append('h3').text("what. the. fuck. who are you? are you jesus??");
     }
-    center.append('h1').text("Your Politcal IQ Score is: " + string(score))
+    center.append('h1').text("Your Politcal IQ Score is: " + score);
     center.append('h3').text("This can be between 0 and 1. 1 is the best political score and 0 is the worst.")
 
 
