--- a/results.html
+++ b/results.html
@@ -124,22 +124,22 @@
     center = d3.select('body').append('center')
     
 
-    center.append('h1').text("Your IQ is: " + scale(score));
+    center.append('h1').text("Your IQ is: " + scale(score)).style('color', "white");
     if (scale(score) < 90) {
-        center.append('h3').text("wow... that's kinda low, sport");
+        center.append('h3').text("wow... that's kinda low, sport").style('color', "white");
     } else if (scale(score) < 100) {
-        center.append('h3').text("ummm... that's not very good. duuhhhh.");
+        center.append('h3').text("ummm... that's not very good. duuhhhh.").style('color', "white");
     } else if (scale(score) < 120) {
-        center.append('h3').text("meh. average");
+        center.append('h3').text("meh. average").style('color', "white");
     } else if (scale(score) < 140) {
-        center.append('h3').text("ok ur pretty smart");
+        center.append('h3').text("ok ur pretty smart").style('color', "white");
     } else if (scale(score) < 160) {
-        center.append('h3').text("wow");
+        center.append('h3').text("wow").style('color', "white");
     } else if (scale(score) <= 200) {
-        center.append('h3').text("what. the. fuck. who are you? are you jesus??");
+        center.append('h3').text("what. the. fuck. who are you? are you jesus??").style('color', "white");
     }
-    center.append('h1').text("Your Politcal IQ Score is: " + score);
-    center.append('h3').text("This can be between 0 and 1. 1 is the best political score and 0 is the worst.")
+    center.append('h1').text("Your Politcal IQ Score is: " + score).style('color', "white");
+    center.append('h3').text("This can be between 0 and 1. 1 is the best political score and 0 is the worst.").style('color', "white");
 
 
     table = center.append('table').attr('width',"90%").style('text-align','center')
